2006-05-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/terminal.cc (have_smart_terminal): Simplify smart terminal
	detection, since it doesn't really work anyway.  We'll now default
	to smart almost everywhere (except inside environments with
	TERM=dumb or TERM=emacs).  Users can override this with
	--ticker=(dot|none) if need be.

	* win32/fs.cc (get_current_working_dir): Strip trailing backslash
	from path, if present.  Fixes bug #16442.

2006-05-01  Timothy Brownawell  <tbrownaw@gmail.com>

	* automate.cc: "automate common_ancestors" was committed accidentally.
	Comment it out until tests/documentation are ready.

2006-04-30  Graydon Hoare  <graydon@pobox.com>

	* xdelta.{cc,hh} (invert_xdelta): New function.
	* database.{cc,hh} (database::get_arbitrary_file_delta): Add.
	(database::put_file_version): Use invert_xdelta.
	* netsync.cc (session::note_file_delta): 
	Use get_arbitrary_file_delta.

2006-04-29  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Updated a fuzzy.

2006-04-29  Matt Johnston  <matt@ucc.asn.au>

	* vocab.hh: removing superfluous string("") constructor shrinks mtn
	binary by >100kB (from Benoît Dejean)

2006-04-28  Alex Queiroz  <alex@ventonegro.org>

	* po/pt_BR.po: Translated more strings.

2006-04-28  Graydon Hoare  <graydon@pobox.com>

	* contrib/color-logs.sh: Update to 'mtn'.
	* enumerator.{cc,hh}: Expose parent map, cache certs.
	* netsync.cc: Use caches in enumerator and refiners.
	* refiner.hh (local_item_exists): New helper.

2006-04-28  Matthew Gregan  <kinetik@orcon.net.nz>

	* database.cc (query::query): Allow query to be constructed
	without an initial SQL command.
	* database.cc (database::complete): Replace use of boost::format
	with query; building the query.sql_cmd as we go.  Fixes potential
	SQL injection attacks.

2006-04-28  Alex Queiroz  <alex@ventonegro.org>

	* po/pt_BR.po: Translated even more strings.

2006-04-27  Timothy Brownawell  <tbrownaw@gmail.com>
